--- a/src/pages/important-documents.astro
+++ b/src/pages/important-documents.astro
@@ -63,13 +63,9 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
             </section>
         </div>
     </main>
-
-
-
-
-    <!-- Footer -->
-    </footer>
-
 <script is:inline src="/script.js"></script>
 </body>
+
+<Footer />
+
 </html>
