--- a/src/pages/important-documents.astro
+++ b/src/pages/important-documents.astro
@@ -13,6 +13,9 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 </head>
 
 <body>
+<!-- Header -->
+<Header />
+
 <!-- Main Content -->
    <!-- Hero Section -->
     <section class="hero">
