--- a/src/components/ContactForm.astro
+++ b/src/components/ContactForm.astro
@@ -27,6 +27,7 @@
                 <option value="competitions">Competition Information</option>
                 <option value="committee">Committee Involvement</option>
                 <option value="coaching application">Coaching Application</option>
+                <option value="Competition Volunteering">Competition Volunteering</option>
                 <option value="other">Other</option>
             </select>
         </div>
