--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -2,22 +2,24 @@
 import HeaderLink from './HeaderLink.astro';
 import { SITE_TITLE } from '../consts';
 ---
-
 <header>
-        <div class="container">
-            <a href="/index" class="logo">T.S.K.V. <span>Spartacus</span></a>
+    <div class="container">
+        <a href="/index" class="logo">T.S.K.V. <span>Spartacus</span></a>
+        <div class="header-right">
+            <a href="/become-a-member" class="cta-button">Become a Member!</a>
             <button class="nav-toggle"><i class="fas fa-bars"></i></button>
-            <nav>
-                <ul>
-                    <li><a href="/index">Home</a></li>
-                    <li><a href="/about">About</a></li>
-                    <li><a href="/strenghtsports">Strenghtsports</a></li>
-                    <li><a href="/become-a-member">Membership</a></li>
-                    <li><a href="/membership-discounts">Discounts</a></li>
-                    <li><a href="/committee">Committee</a></li>
-                    <li><a href="/webshop">Webshop</a></li>
-                    <li><a href="/contact">Contact</a></li>
-                </ul>
-            </nav>
         </div>
-    </header>
+        <nav>
+            <ul>
+                <li><a href="/index">Home</a></li>
+                <li><a href="/about">About</a></li>
+                <li><a href="/strenghtsports">Strenghtsports</a></li>
+                <li><a href="/become-a-member">Membership</a></li>
+                <li><a href="/membership-discounts">Discounts</a></li>
+                <li><a href="/committee">Committee</a></li>
+                <li><a href="/webshop">Webshop</a></li>
+                <li><a href="/contact">Contact</a></li>
+            </ul>
+        </nav>
+    </div>
+</header>
