--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -17,7 +17,7 @@ import { SITE_TITLE } from '../consts';
                 <li><a href="/become-a-member">Membership</a></li>
                 <li><a href="/membership-discounts">Discounts</a></li>
                 <li><a href="/committee">Committee</a></li>
-                <li><a href="/webshop">Webshop</a></li>
+                <li><a href="https://merch.tskvspartacus.nl/" target = "_blank">Webshop</a></li>
                 <li><a href="/contact">Contact</a></li>
             </ul>
         </nav>
