--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -4,20 +4,22 @@ import { SITE_TITLE } from '../consts';
 ---
 <header>
     <div class="container">
-        <a href="index.html" class="logo">T.S.K.V. <span>Spartacus</span></a>
-        <button class="nav-toggle"><i class="fas fa-bars"></i></button>
-        <nav>
-            <ul>
-                <li><a href="/index">Home</a></li>
-                <li><a href="/about">About</a></li>
-                <li><a href="/strenghtsports">Strenghtsports</a></li>
-                <li><a href="/become-a-member">Membership</a></li>
-                <li><a href="/membership-discounts">Discounts</a></li>
-                <li><a href="/committee">Committee</a></li>
-                <li><a href="https://merch.tskvspartacus.nl/" target="_blank">Webshop</a></li>
-                <li><a href="/contact">Contact</a></li>
-            </ul>
-            <a href="/become-a-member" class="cta-button">Become a Member!</a>
-        </nav>
+        <a href="/index" class="logo">T.S.K.V. <span>Spartacus</span></a>
+        <div class="header-right">
+            <nav>
+                <ul>
+                    <li><a href="/index">Home</a></li>
+                    <li><a href="/about">About</a></li>
+                    <li><a href="/strenghtsports">Strenghtsports</a></li>
+                    <li><a href="/become-a-member">Membership</a></li>
+                    <li><a href="/membership-discounts">Discounts</a></li>
+                    <li><a href="/committee">Committee</a></li>
+                    <li><a href="https://merch.tskvspartacus.nl/" target="_blank">Webshop</a></li>
+                    <li><a href="/contact">Contact</a></li>
+                </ul>
+            </nav>
+            <a href="/register" class="cta-button">Register!</a>
+            <button class="nav-toggle"><i class="fas fa-bars"></i></button>
+        </div>
     </div>
 </header>
