--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -36,6 +36,7 @@ header {
     font-size: 28px;
     text-decoration: none;
     color: #fff;
+}
 
 /* CTA Button */
 .cta-button { background-color: #e7c55e; color: #37001b; font-family: 'Bebas Neue', sans-serif; padding: 8px 16px; border-radius: 4px; text-decoration: none; font-weight: bold; transition: background-color 0.3s, transform 0.2s; margin-left: 20px; white-space: nowrap; }
