--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,9 +1,5 @@
----
-import HeaderLink from './HeaderLink.astro';
-import { SITE_TITLE } from '../consts';
----
 <header>
-    <div class="container">
+    <div class="cta-container">
         <a href="/index" class="logo">T.S.K.V. <span>Spartacus</span></a>
         <div class="header-right">
             <nav>
