--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,6 +1,9 @@
 <header>
     <div class="cta-container">
-        <a href="/index" class="logo">T.S.K.V. <span>Spartacus</span></a>
+        <div class="top-row">
+            <a href="/index" class="logo">T.S.K.V. <span>Spartacus</span></a>
+            <a href="/register" class="cta-button">Register!</a>
+        </div>
         <div class="header-right">
             <nav>
                 <ul>
@@ -14,7 +17,6 @@
                     <li><a href="/contact">Contact</a></li>
                 </ul>
             </nav>
-            <a href="/register" class="cta-button">Register!</a>
             <button class="nav-toggle"><i class="fas fa-bars"></i></button>
         </div>
     </div>
