--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -60,7 +60,7 @@ header {
 
 .cta-button {
   background-color: #e7c55e;
-  color: #333;
+  color: #fff;
   font-family: 'Montserrat', sans-serif;
   font-weight: 600;
   padding: 8px 15px;
