--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -60,7 +60,7 @@ header {
 
 .cta-button {
   background-color: #e7c55e;
-  color: #fff;
+  color: #ffffff;
   font-family: 'Montserrat', sans-serif;
   font-weight: 600;
   padding: 8px 15px;
@@ -77,7 +77,6 @@ header {
 
 .header-right {
   width: 100%;
-  margin-left: 28px; /* Align with the logo */
 }
 
 /* Hero Section */
