--- a/src/components/ContactForm.astro
+++ b/src/components/ContactForm.astro
@@ -26,6 +26,8 @@
                 <option value="strength-sports">Strength Sports Questions</option>
                 <option value="competitions">Competition Information</option>
                 <option value="committee">Committee Involvement</option>
+                <option value="coaching application">Coaching Application</option>
+                <option value="Competition Volunteering">Competition Volunteering</option>
                 <option value="other">Other</option>
             </select>
         </div>
@@ -84,7 +86,6 @@
     .contact-form {
         width: 100%;
         max-width: 600px;
-        margin: 0 auto;
         background-color: white;
         padding: 30px;
         border-radius: 5px;
