--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -52,28 +52,27 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
                         <img src="placeholder-board1.jpg" alt="Board Chair">
                         <h3 class="board-member-name">Merel van Buren</h3>
                         <p class="board-member-role">Chair</p>
-                        <p class="board-member-email">chair@tskvspartacus.nl</p>
+                        <p class="board-member-email"><a href="mailto:Voorzitter@tskvspartacus.nl">Voorzitter@tskvspartacus.nl</a></p>
                     </div>
                     
                     <div class="board-member">
                         <img src="placeholder-board2.jpg" alt="Board Secretary">
-                        <h3 class="board-member-name">MARK DE JONG</h3>
+                        <h3 class="board-member-name">Jelle Smitss</h3>
                         <p class="board-member-role">Vice Chair</p>
-                        <p class="board-member-email">vice@tskvspartacus.nl</p>
+                        <p class="board-member-email"><a href="mailto:Vicevoorzitter@tskvspartacus.nl">Vicevoorzitter@tskvspartacus.nl</a></p>
                     </div>
                     
                     <div class="board-member">
                         <img src="placeholder-board3.jpg" alt="Board Treasurer">
-                        <h3 class="board-member-name">SOPHIE BAKKER</h3>
+                        <h3 class="board-member-name">Herman Skledar</h3>
                         <p class="board-member-role">Treasurer</p>
-                        <p class="board-member-email">treasurer@tskvspartacus.nl</p>
+                        <p class="board-member-email"><a href="mailto:Penningmeester@tskvspartacus.nl">Penningmeester@tskvspartacus.nl</a></p>
                     </div>
-
                     <div class="board-member">
                         <img src="placeholder-board4.jpg" alt="Internal Affairs">
-                        <h3 class="board-member-name">THOMAS CHEN</h3>
+                        <h3 class="board-member-name">Sam Aras</h3>
                         <p class="board-member-role">Secretary</p>
-                        <p class="board-member-email">Secretary@tskvspartacus.nl</p>
+                        <p class="board-member-email"><a href="mailto:Secretaris@tskvspartacus.nl">Secretaris@tskvspartacus.nl</a></p>
                     </div>
                 </div>
             </section>
@@ -87,7 +86,7 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
                     </div>
                     <div class="about-text">
                         <h2 class="section-title">Our Affiliation</h2>
-                        <p>T.S.K.V. Spartacus operates in close partnership with the Tilburg University Sports Center, where all our training sessions and most events take place.</p>
+                        <p>T.S.K.V. Spartacus operates in close partnership with the Tilburg University Sports Center, where all our training sessions and most clinics take place.</p>
                         <p>This collaboration allows us to provide our members with access to top-quality equipment and facilities, ensuring the best possible training experience.</p>
                         <p>We're proud to be an official student association recognized by Tilburg University, adhering to the university's standards of inclusivity, safety, and excellence.</p>
                         <div class="button-container">
@@ -113,4 +112,3 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 <Footer />
 
 </html>
-
